apps/medium-place/teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  labels:
    app.kubernetes.io/name: teslamate
    app.kubernetes.io/version: 1.26.1
    app.kubernetes.io/part-of: teslamate
spec:
  selector:
    app.kubernetes.io/name: teslamate
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
  labels:
    app.kubernetes.io/name: teslamate-grafana
    app.kubernetes.io/version: 1.26.1
    app.kubernetes.io/part-of: teslamate
spec:
  selector:
    app.kubernetes.io/name: teslamate-grafana
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
